--- a/frontend/blood-bike-web/src/app/components/tracking-map.component.scss
+++ b/frontend/blood-bike-web/src/app/components/tracking-map.component.scss
@@ -1,7 +1,7 @@
 .tracking-map-container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 80px - env(safe-area-inset-bottom, 0px));
   display: flex;
   flex-direction: column;
 }
